--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
             <a href="https://t.me/huntforblood" class="social-link" target="_blank" aria-label="Telegram">
                 <i class="fab fa-telegram"></i>
             </a>
-            <a href="https://discord.gg/xtxry" class="social-link" target="_blank" aria-label="Discord">
+            <a href="https://discord.gg/WCMWk8BpMP" class="social-link" target="_blank" aria-label="Discord">
                 <i class="fab fa-discord"></i>
             </a>
             <a href="mailto:recitalofx@gmail.com" class="social-link" target="_blank" aria-label="Email">
                 <i class="far fa-envelope"></i>
             </a>
-            <a href="https://etherscan.io/address/ecstasy.eth" class="social-link" target="_blank" aria-label="Ethereum">
+            <a href="https://etherscan.io/address/0x8Eb90B541A7dD7354BE00E2a6cFe6ab206D4c39C" class="social-link" target="_blank" aria-label="Ethereum">
                 <i class="fab fa-ethereum"></i>
             </a>
             <a href="https://github.com/xtial" class="social-link" target="_blank" aria-label="GitHub">
