--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ecstasy ― sexy chill dev</title>
+    <title>paradise ― sexy chill dev</title>
     <meta name="description" content="sexy chill dev">
     <meta name="theme-color" content="#000000">
     <link rel="stylesheet" href="css/style.css">
@@ -43,7 +43,7 @@
                 <img src="assets/avatar.jpg" alt="ecstasy's Profile Picture">
                 <div class="avatar-glow"></div>
             </div>
-            <h1 class="glowing-text">ecstasy</h1>
+            <h1 class="glowing-text">paradise</h1>
             <p class="bio">sexy chill dev</p>
         </section>
 
